# notes-demo-spa

./: .env.sample  .gitignore  Cargo.toml  esbuild.config.js  index.html  package-lock.json  package.json  readme.md
scripts/: debug.sh  release.sh
src/: app.js  browser-event-handlers.js  index.js  lib.rs  morphdom-options.js
